[gd_scene load_steps=2 format=2]

[ext_resource path="res://GameOfLife.gd" type="Script" id=1]

[node name="GameOfLife" type="Node2D"]
script = ExtResource( 1 )

[node name="NextGenTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="StatsLabel" type="Label" parent="."]
margin_left = 19.0919
margin_top = 15.5564
margin_right = 59.0919
margin_bottom = 29.5564
text = "Generation : %d
Active Cells : %d

SpaceBar to Start / Stop"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="NextGenTimer" to="." method="_on_NextGenTimer_timeout"]
